@@ -1,3 +1,8 @@
+Version Next
+
+    - Changed TimedWait to use nanoTime() instead of currentTimeMillis()
+    - Added ThreadParkingLot
+
 Version 1.0.100 Released May 10, 2011
 
     - Added parse() methods taking explicit target to SimpleObjectParser
